2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/console.c, include/bsp.h, include/coverhd.h,
	include/ramdisk.h, start/start.S, startup/bspstart.c,
	startup/hw_init.c, startup/linkcmds, startup/linkcmds-le.coff,
	timer/timer.c, tools/runtest.in: URL for license changed.

2003-08-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add tools to SUBDIRS.
	* configure.ac: Add RTEMS_CONFIG_BUILD_SUBDIRS(tools).

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* tools/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-14	Joel Sherrill <joel@OARcorp.com>

	* tools/runtest: Add fileio to list of interactive tests.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.
	Remove cpp, old_cpp (now unused).

2003-06-13	Joel Sherrill <joel@OARcorp.com>

	* console/console.c, startup/linkcmds: Removed warnings.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).
