@@ -28,6 +28,6 @@ include $(top_srcdir)/../../../../automake/lib.am
 $(LIB): $(OBJS)
 	$(make-library)
 
-all-local: $(ARCH) $(LIB)
+all-local: $(LIB)
 
 include $(top_srcdir)/../../../../automake/local.am
